fixed text alignment of forms on  mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -250,6 +250,7 @@
   }
   .tiptap_editor {
     font-size: 14px;
+    text-align: left;
   }
 
   .bubble-menu > button {
